<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.camera.view.PreviewView
        android:id="@+id/vfCamera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.camera.view.PreviewView>

    <ImageButton
        android:id="@+id/imgBtnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:srcCompat="@drawable/camera_button_72"
        android:contentDescription="@string/btnTakePhoto" />

    <TextView
        android:id="@+id/tvZoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/starting_zoom"
        android:textColor="@color/gold"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vfCamera"
        app:layout_constraintStart_toStartOf="@+id/vfCamera"
        app:layout_constraintTop_toTopOf="@+id/vfCamera" />

    <ImageButton
        android:id="@+id/imgBtnFlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/btnsetflash"
        app:layout_constraintBottom_toBottomOf="@+id/imgBtnCamera"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnCamera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBtnCamera"
        app:srcCompat="@drawable/flash_off_48" />

</androidx.constraintlayout.widget.ConstraintLayout>